deloy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: sparkjava
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: 861531569385.dkr.ecr.us-west-1.amazonaws.com/sparkjava
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
