svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: sparkjava
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
