ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: sparkjava.hanumanthreddy.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: static-svc
            port: 
              number: 8080
